argocd_applications/monitoring/thanos/thanos-compactor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-compactor
  namespace: monitoring
  labels:
    app: thanos-compactor
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 10902
    targetPort: 10902
  selector:
    app: thanos-compactor
