argocd_applications/monitoring/thanos/thanos-query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
  namespace: monitoring
  labels:
    app: thanos-query
spec:
  type: ClusterIP
  ports:
  - name: grpc
    port: 10901
    targetPort: 10901
  - name: http
    port: 9090
    targetPort: 9090
  selector:
    app: thanos-query
