argocd_applications/monitoring/thanos/thanos-query-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - thanos.k8s.local
    secretName: thanos-query-tls
  rules:
  - host: thanos.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanos-query
            port:
              number: 9090
